--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,35 @@
 # Basic
-title: 潘柏信
+title: Shadow4Eric的博客
 subtitle: 个人站
-description: 欢迎来到我的个人站~
+description: 想到哪儿写到哪儿~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: Shadow4Eric
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
-url: "http://baixin.io"
+avatarDesc: 代码 生活 随想
+url: "https://shadow4eric.github.io"
 
 # Comment
 comment:
-    # disqus: leopard
-    duoshuo: leopard 
+    disqus: shadow4eric
+    # duoshuo: 
 
 # Social
 social:
-    weibo: 5366874726 
-    github: leopardpan
+    #weibo: 5366874726 
+    github: shadow4eric
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: shadow4eric@zoho.com
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
-baidu:
-    id: 8ba1c6be0953b6f9c2ba38e57f615421  
+#baidu:
+#    id: 8ba1c6be0953b6f9c2ba38e57f615421  
 
 # Google Analytics
 # 使用博客模板请去掉或者更换 id
-ga:
-    id: UA-84134159-3   
-    host: auto  
+#ga:
+#    id: UA-84134159-3   
+#    host: auto  
 
 
 # 《----------------- 上面的信息修改成你自己的 ---------------------------》
